# niccalc

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE.txt  PKGBUILD  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 22z4n4mxs2vz3l3lg41dz3mgnq1d4wxs-source  yj7jsz1zd3axclv2r1f0n1nn4p32diyq-source
.github/workflows/: make.yml  rust.yml
src/: README.md  calculate_nic.rs  main.rs  main.rs.back  models.rs
