[package]
name = "niccalc"
version = "0.9.17"
authors = ["Gerhard Schwanzer <geri@sdf.org>"]
edition = "2018"
license = "MIT"
description = "A tool to calculate nicotine amount needed for an e-cigarette liquid"
homepage = "https://github.com/geri1701/niccalc"
repository = "https://github.com/geri1701/niccalc"
readme = "README.md"
keywords = ["gui", "convert"]
categories = ["gui"]

[dependencies]
fltk = { version = "1", features = ["fltk-bundled"] }
comfy-table = "7"
cascade = "1"
glib = "0.20"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
